--- a/src/app/testing/value-compatibility-profile/value-compatibility-profile.component.scss
+++ b/src/app/testing/value-compatibility-profile/value-compatibility-profile.component.scss
@@ -33,7 +33,7 @@
   //width: 90%;
   //height: auto;
   //height: 100%;
-  min-width: 70px;
+  min-width: 700px;
   min-height: 300px;
 }
 
@@ -41,6 +41,10 @@
   margin: 0%;
   padding: 0% 0%;
   position: relative;
+  //min-width: 350px;
+  //max-width: 300px;
+  //min-height: 250px;
+  //max-height: 250px;
 }
 .head {
   font-weight: bold;
